# tflite_inference_cpp

./: CMakeLists.txt  IMG_0489.HEIC  IMG_1993.HEIC  tflite.cpp  tflite_inference.cpp
